# aoc-2018

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  neovim.json  new.sh
src/: main.c
src/days/: solution.h
src/days/01/: 01.c  01.h
src/days/02/: 02.c
src/days/03/: 03.c
src/days/04/: 04.c
src/lib/: hash.c  hash.h  hash_map.c  hash_map.h  hash_map_int.c  hash_map_int.h  hash_set.c  hash_set.h  hash_set_int.c  hash_set_int.h  map.c  map.h  set.c  set.h  utils.c  utils.h
src/utils/: utils.c  utils.h
